--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,4 +5,9 @@
     align-items: center;
     height: 20vh;
     font-size: 21px;
+    text-decoration: none;
+}
+
+.link{
+    text-decoration: none;
 }
