--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: poppins, Arial, Helvetica, sans-serif;
 }
 
 h1{
-  font-size: 39px;
+  font-size: 36px;
 }
 
 h2{
-  font-size: 30px;
+  font-size: 25px;
 }
 
 h3{
@@ -19,6 +20,35 @@ h3{
 h4{
   font-size: 43px;
 }
+
+.azul_cmrbolsa_08accc{
+  color: #08accc;
+}
+
+.boton_reserva {
+  width: 250px;
+  height: 52px;
+  background: #08accc;
+  border-color: transparent;
+  cursor: pointer;
+  border-radius: 30px;
+  font-size: 18px;
+  transition: linear 0.2s;
+  color: white;
+  margin: 30px;
+}
+
+.boton_reserva:hover {
+  width: 295px;
+  height: 52px;
+  cursor: pointer;
+  border-radius: 30px;
+  font-size: 21px;
+  border-bottom: 1.5px solid #25d366;
+  background-color: rgb(250, 250, 250);
+  color: #25d366;
+}
+
 
 
 
