--- a/src/components/Landinginfo/Landinginfo.css
+++ b/src/components/Landinginfo/Landinginfo.css
@@ -26,6 +26,13 @@
     align-items: center;
     gap: 12px;
     margin: 18px 0 36px 0;
+    
+}
+
+.Landinginfo_info_como_llegar_al_hotel:hover{
+    transition: linear 0.2s;
+    font-size: 14px;
+    
 }
 
 .Landinginfo_info_fecha_y_lugar h2{
@@ -34,4 +41,47 @@
 
 .Landinginfo_info_fecha_y_lugar h3{
     color: rgb(189, 182, 182);
+}
+
+.Landinginfo_info_a-quien-va-dirigido-y-que-aprenderas{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin: 18px 0 36px 0;
+}
+
+.Landinginfo_info_a-quien-va-dirigido-y-te-gusta{
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    text-align: justify;
+    line-height: 2;
+    font-weight: 450;
+    margin-top: 25px;
+    margin-bottom: 45px;
+}
+
+.Landinginfo_info_a-quien-va-dirigido-comprender_y_operar{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+    text-align: justify;
+    padding: 25px;
+    line-height: 2;
+}
+
+.Landinginfo_info_a-quien-va-dirigido-comprender_y_operar p{
+    padding: 25px;
+}
+
+.Landinginfo_info_a-quien-va-dirigido-adivinar{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    text-align: justify;
+    line-height: 2;
+    font-weight: 450;
 }
