--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: poppins, Arial, Helvetica, sans-serif;
+  --color-azul: #08accc;
 }
 
 h1{
@@ -21,14 +22,18 @@ h4{
   font-size: 43px;
 }
 
+h5{
+  font-size: 14px;
+}
+
 .azul_cmrbolsa_08accc{
-  color: #08accc;
+  color: var(--color-azul)
 }
 
 .boton_reserva {
   width: 250px;
   height: 52px;
-  background: #08accc;
+  background: var(--color-azul);
   border-color: transparent;
   cursor: pointer;
   border-radius: 30px;
