--- a/src/components/LandingPrecio/LandingPrecio.css
+++ b/src/components/LandingPrecio/LandingPrecio.css
@@ -10,7 +10,16 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    
+    gap: 9px;    
+}
+
+.LandingPrecio_con-libro-o-sin-libro p {
+    font-size: 21px;
+}
+
+.LandingPrecio_precio-del-libro{
+    text-decoration: line-through;
+    color: red;
 }
 
 .LandingPrecio_container_general{
@@ -23,10 +32,9 @@
 .LandingPrecio_container_tablas{
     display: flex;
     justify-content: center;
-    border: 3px solid black;
     box-shadow: 9px 9px 9px rgba(0, 0, 0, 0.5);
     border-radius: 12px;
-    height: 450px;
+    height: 390px;
     width: 320px;
     transition: linear 0.2s;
     cursor: pointer;
@@ -34,14 +42,20 @@
 
 .LandingPrecio_container_tablas:hover{
     box-shadow: 9px 0px 9px 0px rgba(8, 172, 204, 0.7);
-    background-color: rgb(197, 166, 208);
+    background-color: rgb(236, 232, 238);
 }
 
 .LandingPrecio_titulo_y_precio{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 18px;
+    gap: 12px;
+}
+
+.LandingPrecio_titulo_y_precio h1{
+    width: 316px;
+    background-color: var(--color-azul);
+    border-radius: 12px 12px 0 0px;
 }
 
 .LandingPrecio_precio{
@@ -49,8 +63,23 @@
     color: #08accc;
 }
 
-.LandingPrecio_info_taller{
+.LandingPrecio_info_taller h3{
+    display: flex;
+    align-items: center;
+    margin-left: 45px;
     line-height: 2.5;
+    gap: 12px;
+}
+
+.LandingPrecio_envio_del_libro{
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    line-height: 2;
+    font-weight: 450;
+
 }
 
 
