--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,12 @@ h5{
   color: #25d366;
 }
 
+@media screen and (max-width: 500px) {
+
+  .LandingGeneral_linea_de_puntos{
+      color: transparent;
+  }
+}
 
 
 
